--- a/bersabeh.html
+++ b/bersabeh.html
@@ -15,7 +15,7 @@
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
-                    <div class="cont" style="width: 20vw; display: inline-block;">
+                    <div class="cont">
                         <div align="center">
                             <input type="text" name="search" id="search" placeholder="Bersabeh" class="form-control searchBox" autocomplete="off"/>
                         </div>
