--- a/intro-page.html
+++ b/intro-page.html
@@ -13,7 +13,7 @@
         	<div class="intro-page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
-                    <div class="cont" style="width: 20vw; display: inline-block;">
+                    <div class="cont">
                         <div align="center">
                             <input type="text" name="search" id="search" placeholder="OnYou" class="form-control searchBox" autocomplete="off" readonly="readonly" />
                         </div>
