--- a/matthew.html
+++ b/matthew.html
@@ -15,7 +15,7 @@
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
-                    <div class="cont" style="width: 20vw; display: inline-block;">
+                    <div class="cont">
                         <div align="center">
                             <input type="text" name="search" id="search" placeholder="Matthew" class="form-control searchBox" autocomplete="off"/>
                         </div>
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="content">
-                    <p class="helvetica">My given name is  ____________________________, and I prefer to go by _________________________.</p>
+                    <p class="helvetica">My given name is  ____________________________, and I prefer to go by ______________________.</p>
                     <p class="helvetica">I am not called by any different names by my family or close friends.</p>
                     <p class="meta one">Matthew Allen Padgett</p>
                     <!-- <p class="meta two"></p> -->
