--- a/peeti.html
+++ b/peeti.html
@@ -103,7 +103,7 @@
         </div>
 
         <div id="content-mobile">
-            <div>
+            <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
                     <div class="cont">
