--- a/intro-page.html
+++ b/intro-page.html
@@ -19,7 +19,7 @@
                         </div>
                         <ul class="list-group helvetica-2" id="result"></ul>
                     </div>
-                    <a href="intro-page.html"><p class="about">about</p></a>
+                    <!-- <a href="intro-page.html"><p class="about">about</p></a> -->
                 </div>
                 <div class="questions">
                     <p class="myStory meta myStory-span">Hi, my name is OnYou and yes, it's my real name.</p><br>
