--- a/newStory.html
+++ b/newStory.html
@@ -13,7 +13,13 @@
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
-                    <input class="inputBox helvetica this" type="text" id="fname" name="firstname" placeholder="search">
+                    <div class="cont">
+                        <div align="center">
+                            <input type="text" name="search" id="search" placeholder="search" class="form-control searchBox this" autocomplete="off" />
+                        </div>
+                        <ul class="list-group helvetica-2" id="result"></ul>
+                    </div>
+                    <!-- <input class="inputBox helvetica" type="text" id="fname" name="firstname" placeholder=""> -->
                     <a href="intro-page.html"><p class="about">about</p></a>
                 </div>
 
@@ -81,6 +87,21 @@
                     <input class="response-input-long meta" type="text" id="fname" name="fname">
 
                     <p class="helvetica lineHeightChange">If your name can be written in another language, please write it below in that language. </p>
+                    <input class="response-input-long meta" type="text" id="fname" name="fname">
+
+                    <p class="helvetica lineHeightChange">In scale of 1 to 10, how important is it that other people spell your name correctly? <span class="star">*</span></p>
+                    <input class="response-input meta" type="text" id="fname" name="fname">
+
+                    <p class="helvetica lineHeightChange">In scale of 1 to 10, how important is it that other people pronounce your name correctly? <span class="star">*</span></p>
+                    <input class="response-input meta" type="text" id="fname" name="fname">
+
+                    <p class="helvetica lineHeightChange">In scale of 1 to 10, how much do you relate your name to your identity? <span class="star">*</span></p>
+                    <input class="response-input meta" type="text" id="fname" name="fname">
+
+                    <p class="helvetica lineHeightChange">Describe a positive incident which your name played a significant role in your interaction with another person. <span class="star">*</span></p>
+                    <input class="response-input-long meta" type="text" id="fname" name="fname">
+
+                    <p class="helvetica lineHeightChange">Describe a negative incident which your name played a significant role in your interaction with another person. <span class="star">*</span></p>
                     <input class="response-input-long meta" type="text" id="fname" name="fname">
 
                     <p class="helvetica lineHeightChange">Is it okay that I publish the survey result on the interactive website that I am creating for senior design capstone? <span class="star">*</span></p>
